<resources>
    <string name="app_name">SimpSonsApi</string>
    <string name="titleApp">Los Simpsons</string>
    <string name="subtitleList">Explora todos los personajes de Springfield</string>
    <string name="labelAgeCharacter">Edad: </string>
    <string name="labelGenderCharacter">Género: </string>
    <string name="labelOccupationCharacter">Occupación: </string>
    <string name="labelStateCharacter">Estado: </string>
    <string name="labelBirthdateCharacter">Fecha de nacimiento: </string>
    <string name="labelPhrasesCharacter">Frases icónicas </string>
    <string name="ageSuffix">años</string>
    <string name="exitButtonDescription">Boton para salir al listado principal de los personajes.</string>
    <string name="loading">Loading...</string>
    <string name="error">Error:</string>
    <string name="unknown1">Desconocido</string>
    <string name="unknown2">No indicado</string>
    <string name="unknown3">Sin fecha</string>
    <string name="searchBarHint">Buscar por nombre...</string>
    <string name="descriptionImageSimpsonCharacter">Imagen del personaje</string>

    <string name="imgUrl">https://cdn.thesimpsonsapi.com/500</string>


</resources>