<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/principal_background_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/nameCharacter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Homer Simpsons"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/imgCharacter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/example" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/labelForAgeCharacter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/labelAgeCharacter"
                        android:drawableStart="@drawable/calendar_today_24px"
                        android:drawablePadding="4dp"
                        android:paddingStart="5sp"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/ageCharacter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="39 años"
                        android:paddingStart="10dp"
                        android:textSize="15sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="7dp">

                    <TextView
                        android:id="@+id/labelForGenderCharacter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/labelGenderCharacter"
                        android:drawableStart="@drawable/person_24px"
                        android:drawablePadding="4dp"
                        android:paddingStart="5sp"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/genderCharacter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Masculine"
                        android:textSize="15sp"
                        android:paddingStart="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="7dp">

                    <TextView
                        android:id="@+id/labelForOccupationCharacter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/labelOccupationCharacter"
                        android:drawableStart="@drawable/person_24px"
                        android:drawablePadding="4dp"
                        android:paddingStart="5sp"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/occupationCharacter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Safety Inspector"
                        android:textSize="15sp"
                        android:paddingStart="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="7dp">

                    <TextView
                        android:id="@+id/labelForStatusCharacter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/labelStateCharacter"
                        android:drawableStart="@drawable/favorite_24px"
                        android:drawablePadding="4dp"
                        android:paddingStart="5sp"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/statusCharacter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Alive"
                        android:textSize="15sp"
                        android:paddingStart="10dp" />
                    </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingTop="7dp">

                    <TextView
                        android:id="@+id/labelForBirthdateCharacter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/labelBirthdateCharacter"
                        android:drawableStart="@drawable/person_24px"
                        android:drawablePadding="4dp"
                        android:paddingStart="5sp"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/birthdateCharacter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="15/05/2006"
                        android:textSize="12dp"
                        android:paddingStart="10dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/labelForPhrasesCharacter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelPhrasesCharacter"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listPhrasesCharacterContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="9dp"
                    tools:listitem="@layout/item_character_phrases"
                    tools:itemCount="50"/>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/exitButtonDescription"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/subdirectory_arrow_left_24px"/>
</FrameLayout>